# bert-ticket-router

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_tickets.py
api/: server.py
configs/: routing.yaml
docs/: architecture.md  specs.md  tasks.md
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: MessageInput.tsx  TicketCard.tsx
frontend/src/lib/: api.ts
frontend/src/test/: App.test.tsx  MessageInput.test.tsx  TicketCard.test.tsx  api.test.ts  smoke.test.ts
frontend/src/types/: api.ts
notebooks/: 02_train.ipynb
src/: config.py  data.py  errors.py  evaluate.py  logging_config.py  model.py  persistence.py  predict.py  routing.py  schemas.py  train.py
tests/: conftest.py  test_classify.py  test_config.py  test_data.py  test_e2e.py  test_errors.py  test_evaluate.py  test_health.py  test_logging_config.py  test_middleware.py  test_model.py  test_persistence.py  test_predict.py  test_routing.py  test_routing_config.py  test_schemas.py  test_server_lifespan.py  test_train.py
