[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bert-ticket-router"
version = "0.1.0"
description = "BERT-based customer-service ticket routing system on PolyAI/banking77."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "rsalehin" }]

dependencies = [
    # Core ML
    "transformers==4.45.0",
    "datasets==3.0.0",
    "torch==2.4.0",
    "scikit-learn==1.5.0",
    "numpy<2.0",

    # Data / plotting
    "pandas==2.2.0",
    "matplotlib==3.9.0",
    "seaborn==0.13.0",

    # API
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",

    # Persistence
    "sqlalchemy==2.0.34",
    "alembic==1.13.2",

    # Utilities
    "pyyaml==6.0.2",
    "python-ulid==3.0.0",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
    "types-PyYAML",
    "nbformat==5.10.4",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]
exclude = ["tests*", "notebooks*", "frontend*", "artifacts*", "configs*", "docs*"]

# ----------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", "frontend", ".venv", "artifacts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # allow camelCase / non-PEP8 in fixtures

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that load real models or hit the network (deselect with -m 'not slow')",
]

# ----------------------------------------------------------------------
# Mypy
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "api"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true
